[gd_scene load_steps=5 format=3 uid="uid://b8cdvr2tr0y4c"]

[ext_resource type="Script" uid="uid://b1mqk1kknrr1k" path="res://scenes/ui/main_screen/main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c7gpddms8dggn" path="res://scenes/ui/info_panel/info_panel.tscn" id="2_iu1df"]
[ext_resource type="PackedScene" uid="uid://dibf4fgjie87y" path="res://scenes/game/translator/translator.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://cgypytgu10ukf" path="res://scenes/ui/popup_message/popup_message.tscn" id="4_iu1df"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="InfoPanel" parent="." instance=ExtResource("2_iu1df")]

[node name="WorldPanel" type="PanelContainer" parent="."]
offset_left = 400.0
offset_top = 1.0
offset_right = 1922.0
offset_bottom = 1079.0

[node name="Translator" parent="." instance=ExtResource("3_h2yge")]
position = Vector2(224, 856)

[node name="EventSpawner" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PopupMessage" parent="." instance=ExtResource("4_iu1df")]

[connection signal="timeout" from="EventSpawner" to="." method="new_email_from_client"]
